// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`augments Terrain without redeclaring Workspace.Terrain 1`] = `
"/* eslint-disable -- This file is generated by rbxtsc */
interface Terrain {
    Attachment: Attachment & {
        Child: Folder;
    };
}
interface Workspace {
    Spawn: SpawnLocation;
}
"
`;

exports[`escapes quoted property names while preserving their exact values 1`] = `
"/* eslint-disable -- This file is generated by rbxtsc */
interface ReplicatedStorage {
    "Say \\"hello\\"": Folder;
    "carriage\\rreturn": Folder;
    "line\\nbreak": Folder;
    "path\\\\node": Folder;
    "space name": Folder;
    validName: Folder;
}
"
`;

exports[`excludes cloned containers, node_modules, and duplicate child names 1`] = `
"/* eslint-disable -- This file is generated by rbxtsc */
interface ReplicatedStorage {
    Children: Folder & {
        Same: Folder;
    };
}
"
`;

exports[`keeps a childless Terrain's existing declaration 1`] = `
"/* eslint-disable -- This file is generated by rbxtsc */
interface Workspace {
}
"
`;
